--- a/scss/_plugins.scss
+++ b/scss/_plugins.scss
@@ -1077,9 +1077,6 @@ body.format-tiles.editing {
             margin-left: auto;
             margin-right: 3rem;
         }
-        .my-1 {
-            margin-left: 10%;
-        }
     }
 
     li.subtile {
